# NWgr

./: .clang-format  .gitignore  CMakeLists.txt  Contributors.rst  DISCLAIMER.rst  LICENSE  LICENSE.rst  README.md  README_VLDB.md
.github/workflows/: build_cmake.yml  build_cmake_mac.yml  gh-pages-too.yml  gh-pages.yml  matrix_test.yml
apb/: CMakeLists.txt  bfs.cpp  containers.cpp  dfs.cpp  dijkstra.cpp  exec.cpp  plain.cpp  spmv.cpp  tbb.cpp
bench/: CMakeLists.txt  Log.hpp  ProcessEdgelist.cpp  SourceVerifier.cpp  bc.cpp  bfs.cpp  bicc.cpp  bicc2.cpp  cc.cpp  common.hpp  config.h.in  js.cpp  pr.cpp  sssp.cpp  sv.cpp  tc.cpp
cmake/: Catch2.cmake  Date.cmake  Docopt.cmake  FindFilesystem.cmake  FindTBB.cmake  RangeV3.cmake
data/: coloringData.mmio
doc-src/: CMakeLists.txt
doc-src/docs/: genindex.html  index.html  objects.inv  searchindex.js
doc-src/sphinx/: Makefile  README.rst  conf.py  index.rst  nwgraph_api.rst
docker/: Dockerfile.gh-pages  Dockerfile.pages
docs/: .buildinfo  CMakeLists.txt  Doxyfile.in  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: README.doctree  environment.pickle  index.doctree
examples/bgl-book/: CMakeLists.txt  ch3_toposort.cpp  ch4_kevin_bacon.cpp  ch4_loop_detection.cpp  ch5_bellman_ford.cpp  ch5_dijkstra.cpp  ch6_kruskal.cpp  ch6_prim.cpp  ch7_connected.cpp  ch7_strongly_connected.cpp  ch8_maxflow.cpp  ch9_knights_tour.cpp
examples/imdb/: CMakeLists.txt  dblp.cpp  dns.cpp  imdb.cpp  main.cpp  oracle+dblp.cpp  oracle.cpp
include/: CMakeLists.txt  access.hpp  aolos.hpp  aos.hpp  back_edge_range.hpp  bfs_edge_range.hpp  bfs_range.hpp  build.hpp  compressed.hpp  coo.hpp  csc.hpp  csr.hpp  cyclic_range_adapter.hpp  dag_range.hpp  dfs_range.hpp  disjoint_set.hpp  edge_list.hpp  edge_range.hpp  filtered_bfs_range.hpp  graph_base.hpp  graph_concepts.hpp  graph_traits.hpp  mmio.h  mmio.hpp  neighbor_range.hpp  new_dfs_range.hpp  permutation_iterator.hpp  plain_range.hpp  provenance.hpp  proxysort.hpp  random_range.hpp  rcm.hpp  reverse.hpp  soa.hpp  splittable_range_adapter.hpp  util.hpp  util_par.hpp  vovos.hpp  worklist.hpp
include/adaptors/: back_edge_range.hpp  bfs_edge_range.hpp  bfs_range.hpp  cyclic_neighbor_range.hpp  cyclic_range_adapter.hpp  dag_range.hpp  dfs_range.hpp  edge_range.hpp  filtered_bfs_range.hpp  neighbor_range.hpp  new_dfs_range.hpp  plain_range.hpp  random_range.hpp  reverse.hpp  splittable_range_adapter.hpp  vertex_range.hpp  worklist.hpp
include/algorithms/: betweenness_centrality.hpp  bfs.hpp  boykov_kolmogorov.hpp  boykov_kolmogorov2.hpp  boykov_kolmogorov3.hpp  connected_components.hpp  dag_based_mis.hpp  delta_stepping.hpp  dijkstra.hpp  jaccard.hpp  jones_plassmann_coloring.hpp  k_core.hpp  k_truss.hpp  kruskal.hpp  max_flow.hpp  mis.hpp  page_rank.hpp  prim.hpp  spMatspMat.hpp  spanning_tree.hpp  triangle_count.hpp
include/containers/: adjacency.hpp  aolos.hpp  aos.hpp  compressed.hpp  edge_list.hpp  soa.hpp  volos.hpp  vovos.hpp
include/detail/: numeric.hpp  tag_invoke.hpp
include/io/: MatrixMarketFile.hpp  mmio.hpp
include/nwgraph/: access.hpp  adjacency.hpp  build.hpp  compat.hpp  config.hpp  coo.hpp  csc.hpp  csr.hpp  edge_list.hpp  graph_base.hpp  graph_concepts.hpp  graph_traits.hpp  scrap.cpp  vofos.hpp  volos.hpp  vovos.hpp
include/nwgraph/adaptors/: back_edge_range.hpp  bfs_edge_range.hpp  bfs_range.hpp  cyclic_neighbor_range.hpp  cyclic_range_adapter.hpp  cyclic_range_adaptor.hpp  dag_range.hpp  dfs_range.hpp  edge_range.hpp  filtered_bfs_range.hpp  neighbor_range.hpp  new_dfs_range.hpp  plain_range.hpp  random_range.hpp  reverse.hpp  scrap.cpp  splittable_range_adapter.hpp  splittable_range_adaptor.hpp  vertex_range.hpp  worklist.hpp
include/nwgraph/algorithms/: betweenness_centrality.hpp  bfs.hpp  boykov_kolmogorov.hpp  connected_components.hpp  dag_based_mis.hpp  delta_stepping.hpp  dijkstra.hpp  jaccard.hpp  jones_plassmann_coloring.hpp  k_core.hpp  k_truss.hpp  kruskal.hpp  max_flow.hpp  maximal_independent_set.hpp  mis.hpp  page_rank.hpp  prim.hpp  spMatspMat.hpp  triangle_count.hpp
include/nwgraph/containers/: aos.hpp  compressed.hpp  flattened.hpp  scrap.cpp  soa.hpp  zip.hpp
include/nwgraph/experimental/algorithms/: betweenness_centrality.hpp  bfs.hpp  connected_components.hpp  delta_stepping.hpp  jaccard.hpp  page_rank.hpp  triangle_count.hpp
include/nwgraph/generators/: configuration_model.hpp
include/nwgraph/graphs/: imdb-graph.hpp  karate-graph.hpp  ospf-graph.hpp
include/nwgraph/io/: MatrixMarketFile.hpp  mmio.hpp
include/nwgraph/util/: AtomicBitVector.hpp  algorithm.hpp  arrow_proxy.hpp  atomic.hpp  counting_iterator.hpp  defaults.hpp  demangle.hpp  disjoint_set.hpp  execution.hpp  future.hpp  intersection_size.hpp  make_priority_queue.hpp  parallel_for.hpp  permutation_iterator.hpp  print_types.hpp  provenance.hpp  proxysort.hpp  tag_invoke.hpp  timer.hpp  traits.hpp  tuple_hack.hpp  util.hpp  util_par.hpp
include/util/: AtomicBitVector.hpp  algorithm.hpp  arrow_proxy.hpp  atomic.hpp  counting_iterator.hpp  defaults.hpp  demangle.hpp  disjoint_set.hpp  execution.hpp  intersection_size.hpp  make_priority_queue.hpp  parallel_for.hpp  permutation_iterator.hpp  print_types.hpp  proxysort.hpp  tag_invoke.hpp  timer.hpp  traits.hpp  types.hpp  util.hpp  util_par.hpp
test/: CMakeLists.txt  adjacency_eg.cpp  adjacency_test.cpp  aolos_test.cpp  aos_test.cpp  back_edge_test.cpp  bfs_test_0.cpp  bfs_test_1.cpp  binio_eg.cpp  binio_test.cpp  bk.cpp  bk_test.cpp  catch_main.cpp  compat_eg.cpp  compressed_test.cpp  concepts_eg.cpp  connected_component_test.cpp  containers_eg.cpp  convert.cpp  convert_test.cpp  cstar_eg.cpp  degree_eg.cpp  dijkstra_eg.cpp  dijkstra_test_0.cpp  directedness_eg.cpp  edge_list.cpp  edge_list_eg.cpp  edge_list_test.cpp  edge_list_test_1.cpp  edge_range_eg.cpp  graph_traits_eg.cpp  idxsoa_1.cpp  index_soa_eg.cpp  indexing_eg.cpp  indexing_test.cpp  init_eg.cpp  init_test.cpp  io_eg.cpp  iotest.cpp  jaccard_eg.cpp  (+47 more)
test/common/: abstract_test.hpp  test_header.hpp
(+3858 files in other folders)
