include(Catch2)
message("Supported features = ${CMAKE_CXX_COMPILE_FEATURES}")

macro (bgl17_add_exe EXENAME)
  add_executable(${EXENAME} ${EXENAME}.cpp)
  target_link_libraries(${EXENAME} bgl)
  # add_test(NAME ${EXENAME}_test COMMAND ${EXENAME})
endmacro (bgl17_add_exe)

macro (bgl17_add_test TESTNAME)
  add_executable(${TESTNAME} ${TESTNAME}.cpp)
  target_link_libraries(${TESTNAME} bgl Catch2::Catch2)
  target_compile_definitions(${TESTNAME} PRIVATE DATA_DIR="${CMAKE_SOURCE_DIR}/data/")
  target_compile_definitions(${TESTNAME} PRIVATE DATA_FILE="${CMAKE_SOURCE_DIR}/data/line.mmio")
  add_test(NAME ${TESTNAME}_test COMMAND ${TESTNAME})
  #  catch_discover_tests(${TESTNAME})
endmacro (bgl17_add_test)

# Add Catch2 tests
bgl17_add_test(mmio_test)
bgl17_add_test(aos_test)
bgl17_add_test(aolos_test)
bgl17_add_test(vov_test)
bgl17_add_test(bfs_test_0)
bgl17_add_test(bfs_test_1)
bgl17_add_test(page_rank_test)
bgl17_add_test(compressed_test)
bgl17_add_test(edge_list)
bgl17_add_test(max_flow_test)
bgl17_add_test(spanning_tree_test)
bgl17_add_test(kcore_test)
bgl17_add_test(new_dfs_test)
bgl17_add_test(adjacency_test)
bgl17_add_test(jp_coloring_test)
bgl17_add_test(connected_component_test)
bgl17_add_test(mis_test)
bgl17_add_test(bk)
bgl17_add_test(triangle_test)
bgl17_add_test(back_edge_test)
bgl17_add_test(rcm_test)

# exptected failures for now
set_tests_properties(mis_test_test jp_coloring_test_test page_rank_test_test
  PROPERTIES WILL_FAIL TRUE)

# These need to be converted to Catch2 tests
bgl17_add_exe(dijkstra_test_0)
bgl17_add_exe(edge_list_test_1)
bgl17_add_exe(idxsoa_1)
bgl17_add_exe(plain_range_test)
bgl17_add_exe(random_test_0)
bgl17_add_exe(stream_test_0)
bgl17_add_exe(spmm_test)
bgl17_add_exe(binio_test)
bgl17_add_exe(convert_test)
bgl17_add_exe(init_test)
bgl17_add_exe(math_test)
bgl17_add_exe(provenance_test)
bgl17_add_exe(proxysort_test)
bgl17_add_exe(indexing_test)
bgl17_add_exe(tbb_test)
