include(Catch2)
message("Supported features = ${CMAKE_CXX_COMPILE_FEATURES}")

macro (nw_graph_add_exe EXENAME)
  add_executable(${EXENAME}.exe ${EXENAME}.cpp)
  target_link_libraries(${EXENAME}.exe nw_graph)
endmacro (nw_graph_add_exe)

macro (nw_graph_add_test TESTNAME)
  add_executable(${TESTNAME}.exe ${TESTNAME}.cpp)
  target_link_libraries(${TESTNAME}.exe nw_graph Catch2::Catch2)
  target_compile_definitions(${TESTNAME}.exe PRIVATE DATA_DIR="${CMAKE_SOURCE_DIR}/data/")
  target_compile_definitions(${TESTNAME}.exe PRIVATE DATA_FILE="${CMAKE_SOURCE_DIR}/data/line.mmio")
  add_test(NAME ${TESTNAME}_test COMMAND ${TESTNAME}.exe)
  #  catch_discover_tests(${TESTNAME})
endmacro (nw_graph_add_test)

# Add Catch2 tests
nw_graph_add_test(adjacency_test)
nw_graph_add_test(aolos_test)
nw_graph_add_test(aos_test)
nw_graph_add_test(back_edge_test)
nw_graph_add_test(bfs_test_0)
nw_graph_add_test(bfs_test_1)
nw_graph_add_test(bk_test)
nw_graph_add_test(compressed_test)
nw_graph_add_test(connected_component_test)
nw_graph_add_test(edge_list_test)
nw_graph_add_test(jp_coloring_test)
nw_graph_add_test(kcore_test)
nw_graph_add_test(max_flow_test)
nw_graph_add_test(mis_test)
nw_graph_add_test(mmio_test)
nw_graph_add_test(new_dfs_test)
nw_graph_add_test(page_rank_test)
nw_graph_add_test(rcm_test)
nw_graph_add_test(size_test)
nw_graph_add_test(soa_test)
nw_graph_add_test(spanning_tree_test)
nw_graph_add_test(triangle_test)
nw_graph_add_test(vov_test)

# exptected failures for now
set_tests_properties(mis_test_test jp_coloring_test_test page_rank_test_test
  PROPERTIES WILL_FAIL TRUE)

# Example programs (not catch2)
nw_graph_add_exe(concepts_eg)
nw_graph_add_exe(containers_eg)
nw_graph_add_exe(dijkstra_eg)
nw_graph_add_exe(edge_list_eg)
nw_graph_add_exe(index_soa_eg)
nw_graph_add_exe(indexing_eg)
nw_graph_add_exe(init_eg)
nw_graph_add_exe(plain_range_eg)
nw_graph_add_exe(proxysort_eg)
nw_graph_add_exe(random_eg)
nw_graph_add_exe(spmm_eg)
nw_graph_add_exe(stream_eg)
nw_graph_add_exe(tbb_eg)

# nw_graph_add_exe(binio_eg)
# nw_graph_add_exe(io_eg)
# nw_graph_add_exe(math_eg)
# nw_graph_add_exe(ranges_and_concepts_eg)
# nw_graph_add_exe(symmetrize_eg)


