include(Catch2)
message("Supported features = ${CMAKE_CXX_COMPILE_FEATURES}")

macro (nw_graph_add_exe EXENAME)
  add_executable(${EXENAME} ${EXENAME}.cpp)
  target_link_libraries(${EXENAME} nw_graph)
  # add_test(NAME ${EXENAME}_test COMMAND ${EXENAME})
endmacro (nw_graph_add_exe)

macro (nw_graph_add_test TESTNAME)
  add_executable(${TESTNAME} ${TESTNAME}.cpp)
  target_link_libraries(${TESTNAME} nw_graph Catch2::Catch2)
  target_compile_definitions(${TESTNAME} PRIVATE DATA_DIR="${CMAKE_SOURCE_DIR}/data/")
  target_compile_definitions(${TESTNAME} PRIVATE DATA_FILE="${CMAKE_SOURCE_DIR}/data/line.mmio")
  add_test(NAME ${TESTNAME}_test COMMAND ${TESTNAME})
  #  catch_discover_tests(${TESTNAME})
endmacro (nw_graph_add_test)

# Add Catch2 tests
nw_graph_add_test(mmio_test)
nw_graph_add_test(aos_test)
nw_graph_add_test(soa_test)
nw_graph_add_test(aolos_test)
nw_graph_add_test(vov_test)
nw_graph_add_test(bfs_test_0)
nw_graph_add_test(bfs_test_1)
nw_graph_add_test(page_rank_test)
nw_graph_add_test(compressed_test)
nw_graph_add_test(edge_list)
nw_graph_add_test(max_flow_test)
nw_graph_add_test(spanning_tree_test)
nw_graph_add_test(kcore_test)
nw_graph_add_test(new_dfs_test)
nw_graph_add_test(adjacency_test)
nw_graph_add_test(jp_coloring_test)
nw_graph_add_test(connected_component_test)
nw_graph_add_test(mis_test)
nw_graph_add_test(bk)
nw_graph_add_test(triangle_test)
nw_graph_add_test(back_edge_test)
nw_graph_add_test(size_test)

# exptected failures for now
set_tests_properties(mis_test_test jp_coloring_test_test page_rank_test_test
  PROPERTIES WILL_FAIL TRUE)

# These need to be converted to Catch2 tests
nw_graph_add_exe(dijkstra_test_0)
nw_graph_add_exe(edge_list_test_1)
nw_graph_add_exe(idxsoa_1)
nw_graph_add_exe(plain_range_test)
nw_graph_add_exe(random_test_0)
nw_graph_add_exe(stream_test_0)
nw_graph_add_exe(spmm_test)
nw_graph_add_exe(init_test)
nw_graph_add_exe(provenance_test)
nw_graph_add_exe(proxysort_test)
nw_graph_add_exe(indexing_test)
nw_graph_add_exe(tbb_test)

# nw_graph_add_exe(math_test)
# nw_graph_add_exe(convert_test)
# nw_graph_add_exe(binio_test)
